--- a/Bestie/Base.lproj/LaunchScreen.storyboard
+++ b/Bestie/Base.lproj/LaunchScreen.storyboard
@@ -16,19 +16,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Face-Right" translatesAutoresizingMaskIntoConstraints="NO" id="2rd-fF-cLX">
-                                <rect key="frame" x="267.5" y="267.5" width="65" height="65"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Sticker" translatesAutoresizingMaskIntoConstraints="NO" id="nv6-lD-IyN">
+                                <rect key="frame" x="225" y="225" width="150" height="150"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="65" id="80U-br-2GX"/>
-                                    <constraint firstAttribute="width" constant="65" id="Odw-RJ-DHt"/>
+                                    <constraint firstAttribute="height" constant="150" id="K5I-Qf-Dek"/>
+                                    <constraint firstAttribute="width" constant="150" id="TKE-ye-tVS"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="2rd-fF-cLX" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="cJO-yx-Yke"/>
-                            <constraint firstItem="2rd-fF-cLX" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="vga-3Q-Rva"/>
+                            <constraint firstItem="nv6-lD-IyN" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Ujn-t6-YXh"/>
+                            <constraint firstItem="nv6-lD-IyN" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="wZc-tc-EBK"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -38,6 +38,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Face-Right" width="65" height="65"/>
+        <image name="Sticker" width="263" height="263"/>
     </resources>
 </document>
