--- a/Bestie/Base.lproj/Main.storyboard
+++ b/Bestie/Base.lproj/Main.storyboard
@@ -470,7 +470,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Men" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="GX1-Jy-y73">
-                                                    <rect key="frame" x="263.5" y="18" width="41.5" height="20"/>
+                                                    <rect key="frame" x="273" y="18" width="32" height="19.5"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
@@ -532,17 +532,23 @@
                                         <rect key="frame" x="15" y="15" width="206" height="400"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LZJ-uT-NxJ">
-                                                <rect key="frame" x="0.0" y="0.0" width="206" height="282"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="206" height="259"/>
                                             </imageView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MhA-Zh-QEi">
-                                                <rect key="frame" x="0.0" y="282" width="206" height="118"/>
+                                                <rect key="frame" x="0.0" y="259" width="206" height="141"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Best Selfie Score" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="u4U-jy-AWJ">
-                                                        <rect key="frame" x="0.0" y="6" width="206" height="30"/>
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Info" translatesAutoresizingMaskIntoConstraints="NO" id="P4A-rQ-Qnm">
+                                                        <rect key="frame" x="171" y="1" width="25" height="50"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="height" constant="30" id="Plu-kb-4Oa"/>
+                                                            <constraint firstAttribute="width" constant="25" id="mQk-ar-60e"/>
                                                         </constraints>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                    </imageView>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Best Selfie" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="u4U-jy-AWJ">
+                                                        <rect key="frame" x="0.0" y="1" width="206" height="50"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="50" id="Plu-kb-4Oa"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
                                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
@@ -554,7 +560,7 @@
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q0S-qZ-SgC">
-                                                        <rect key="frame" x="0.0" y="36" width="206" height="82"/>
+                                                        <rect key="frame" x="0.0" y="51" width="206" height="90"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="250" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Pmg-xU-jVI">
                                                                 <rect key="frame" x="0.0" y="0.0" width="206" height="55"/>
@@ -565,10 +571,10 @@
                                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Thats alot!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5D2-Ez-DUc">
-                                                                <rect key="frame" x="0.0" y="62" width="206" height="20"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Like this photo of you" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5D2-Ez-DUc">
+                                                                <rect key="frame" x="0.0" y="55" width="206" height="35"/>
                                                                 <constraints>
-                                                                    <constraint firstAttribute="height" constant="20" id="7R1-4L-57a"/>
+                                                                    <constraint firstAttribute="height" constant="35" id="7R1-4L-57a"/>
                                                                 </constraints>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -578,7 +584,7 @@
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <constraints>
                                                             <constraint firstAttribute="bottom" secondItem="5D2-Ez-DUc" secondAttribute="bottom" id="8Kz-uO-Aii"/>
-                                                            <constraint firstItem="5D2-Ez-DUc" firstAttribute="top" secondItem="Pmg-xU-jVI" secondAttribute="bottom" constant="7" id="CpH-dh-83a"/>
+                                                            <constraint firstItem="5D2-Ez-DUc" firstAttribute="top" secondItem="Pmg-xU-jVI" secondAttribute="bottom" id="CpH-dh-83a"/>
                                                             <constraint firstAttribute="trailing" secondItem="5D2-Ez-DUc" secondAttribute="trailing" id="MXj-yd-gpb"/>
                                                             <constraint firstAttribute="trailing" secondItem="Pmg-xU-jVI" secondAttribute="trailing" id="R6q-as-7cF"/>
                                                             <constraint firstItem="Pmg-xU-jVI" firstAttribute="top" secondItem="q0S-qZ-SgC" secondAttribute="top" id="Wv3-uW-prm"/>
@@ -589,10 +595,13 @@
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
+                                                    <constraint firstItem="P4A-rQ-Qnm" firstAttribute="top" secondItem="NsU-9e-xzh" secondAttribute="bottom" id="A15-kB-KJU"/>
                                                     <constraint firstItem="NsU-9e-xzh" firstAttribute="top" secondItem="MhA-Zh-QEi" secondAttribute="top" id="HYJ-ea-cI7"/>
-                                                    <constraint firstItem="u4U-jy-AWJ" firstAttribute="top" secondItem="NsU-9e-xzh" secondAttribute="bottom" constant="5" id="U58-WX-GOz"/>
+                                                    <constraint firstItem="u4U-jy-AWJ" firstAttribute="top" secondItem="NsU-9e-xzh" secondAttribute="bottom" id="U58-WX-GOz"/>
+                                                    <constraint firstItem="q0S-qZ-SgC" firstAttribute="top" secondItem="P4A-rQ-Qnm" secondAttribute="bottom" id="Vz4-7n-Anp"/>
                                                     <constraint firstItem="u4U-jy-AWJ" firstAttribute="leading" secondItem="MhA-Zh-QEi" secondAttribute="leading" id="a7S-Wd-dd7"/>
                                                     <constraint firstAttribute="trailing" secondItem="q0S-qZ-SgC" secondAttribute="trailing" id="cfX-LX-MzQ"/>
+                                                    <constraint firstAttribute="trailing" secondItem="P4A-rQ-Qnm" secondAttribute="trailing" constant="10" id="dQM-nC-tO8"/>
                                                     <constraint firstAttribute="trailing" secondItem="u4U-jy-AWJ" secondAttribute="trailing" id="eNf-EU-Jn0"/>
                                                     <constraint firstAttribute="bottom" secondItem="q0S-qZ-SgC" secondAttribute="bottom" id="j7M-IY-dOZ"/>
                                                     <constraint firstItem="q0S-qZ-SgC" firstAttribute="top" secondItem="u4U-jy-AWJ" secondAttribute="bottom" id="jJO-QN-kFp"/>
@@ -642,9 +651,11 @@
                     </view>
                     <connections>
                         <outlet property="bestieLabel" destination="u4U-jy-AWJ" id="eGo-Tq-Gmx"/>
+                        <outlet property="bottomConstraint" destination="8Kz-uO-Aii" id="V9h-Fu-AWF"/>
                         <outlet property="container" destination="rik-ik-LLv" id="B10-hq-llS"/>
-                        <outlet property="dataContainer" destination="q0S-qZ-SgC" id="RaX-mw-L2m"/>
+                        <outlet property="dataContainer" destination="q0S-qZ-SgC" id="vcH-IE-lgo"/>
                         <outlet property="headerImage" destination="LZJ-uT-NxJ" id="AL0-tN-QSb"/>
+                        <outlet property="infoImage" destination="P4A-rQ-Qnm" id="Jwh-La-FT6"/>
                         <outlet property="infoText" destination="5D2-Ez-DUc" id="WW6-pD-ifc"/>
                         <outlet property="innerContainer" destination="RXC-1r-10g" id="xWe-eF-2bZ"/>
                         <outlet property="separator" destination="NsU-9e-xzh" id="bQU-Gc-slr"/>
@@ -658,6 +669,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Info" width="100" height="100"/>
         <image name="Sticker" width="263" height="263"/>
     </resources>
     <inferredMetricsTieBreakers>
