--- a/Bestie/Base.lproj/LaunchScreen.storyboard
+++ b/Bestie/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9046" systemVersion="14E36b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9035"/>
     </dependencies>
     <scenes>
@@ -38,6 +39,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Sticker" width="263" height="263"/>
+        <image name="Sticker" width="1500" height="1500"/>
     </resources>
 </document>
