--- a/Bestie/Base.lproj/Main.storyboard
+++ b/Bestie/Base.lproj/Main.storyboard
@@ -571,8 +571,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="54.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Show Me" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="nAg-1W-Zou">
-                                                    <rect key="frame" x="15" y="20" width="58.5" height="16"/>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="I Want To See" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="nAg-1W-Zou">
+                                                    <rect key="frame" x="15" y="20" width="86.5" height="16"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" name="Bariol-Regular" family="Bariol" pointSize="16"/>
                                                     <color key="textColor" red="0.24806314336790822" green="0.24682899837602809" blue="0.24929728835978837" alpha="1" colorSpace="calibratedRGB"/>
