--- a/Bestie/Base.lproj/Main.storyboard
+++ b/Bestie/Base.lproj/Main.storyboard
@@ -172,7 +172,7 @@
                                         </constraints>
                                         <size key="customSize" width="98" height="97"/>
                                         <connections>
-                                            <outlet property="plusLabel" destination="gyX-gg-rxk" id="Zpo-AC-xxI"/>
+                                            <outlet property="plusLabel" destination="gyX-gg-rxk" id="rGU-Sm-Dqe"/>
                                         </connections>
                                     </collectionViewCell>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="TeW-vT-DH0" customClass="ImageCollectionCell" customModule="Bestie" customModuleProvider="target">
@@ -186,7 +186,7 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="97" height="93"/>
                                                 </imageView>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k6A-cR-QBH">
-                                                    <rect key="frame" x="77" y="-10" width="30" height="30"/>
+                                                    <rect key="frame" x="74" y="-7" width="30" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="JWx-ZK-CGg"/>
                                                         <constraint firstAttribute="width" constant="30" id="ke4-uG-8je"/>
@@ -201,11 +201,11 @@
                                         </view>
                                         <constraints>
                                             <constraint firstItem="SPH-Sk-Gbp" firstAttribute="top" secondItem="TeW-vT-DH0" secondAttribute="topMargin" constant="-8" id="1Re-96-p6N"/>
-                                            <constraint firstItem="k6A-cR-QBH" firstAttribute="top" secondItem="TeW-vT-DH0" secondAttribute="topMargin" constant="-18" id="GwO-I6-cgg"/>
+                                            <constraint firstItem="k6A-cR-QBH" firstAttribute="top" secondItem="TeW-vT-DH0" secondAttribute="topMargin" constant="-15" id="GwO-I6-cgg"/>
                                             <constraint firstAttribute="bottomMargin" secondItem="SPH-Sk-Gbp" secondAttribute="bottom" constant="-8" id="IFW-My-xiQ"/>
                                             <constraint firstAttribute="trailingMargin" secondItem="SPH-Sk-Gbp" secondAttribute="trailing" constant="-8" id="Kqz-DI-Hmr"/>
                                             <constraint firstItem="SPH-Sk-Gbp" firstAttribute="leading" secondItem="TeW-vT-DH0" secondAttribute="leadingMargin" constant="-8" id="TvL-UN-Way"/>
-                                            <constraint firstAttribute="trailingMargin" secondItem="k6A-cR-QBH" secondAttribute="trailing" constant="-18" id="mzy-0b-Wuz"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="k6A-cR-QBH" secondAttribute="trailing" constant="-15" id="mzy-0b-Wuz"/>
                                         </constraints>
                                         <size key="customSize" width="97" height="93"/>
                                         <connections>
